# tutu-agent

./: .env.production  .gitignore  Dockerfile  agent.http  constant.py  docker-compose.yaml  docker-compose.yml  llm.py  main.py  pyproject.toml
agents/: agent.py  main_agent.py  prompt.py  test_agent.py
agents/db/: agent.py
agents/doc/: agent.py
agents/intent/: agent.py  prompts.py
agents/order/: agent.py  prompts.py
agents/rag/: agent.py  prompts.py  tool.py
agents/receipt/: agent.py  enum.py  example_selector.py  image_agent.py  milvus_example_selector.py  prompte.py  receipt_agent.py  receipt_dto.py  tools.py
apis/: agent.py  gpts.py  rag.py  tools.py
checkpointer/: RedisCheckpointerSaver.py
components/: _redis.py  db.py  store.py
dto/: chat_request_dto.py  inventory_dto.py  rag_request.py
entity/: clientele.py  inventory.py
services/: clientele.py  example.py  inventory.py  oss.py  rag.py
tools/: sql_toolkit.py
tools/sql_database/: tools.py
utils/: vector.py
