[project]
name = "yangzhou_llm"
version = "0.1.0"
description = ""
authors = [
    {name = "xuchen01",email = "kingxc1991@foxmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.11,<0.4.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "redis (>=5.2.1,<6.0.0)",
    "jsonpickle (>=4.0.2,<5.0.0)",
    "py-redis (>=1.1.1,<2.0.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "pymilvus (>=2.5.6,<3.0.0)",
    "langchain-milvus (>=0.1.8,<0.2.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "pydash (>=8.0.5,<9.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "oss2 (>=2.19.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "cos-python-sdk-v5 (>=1.9.36,<2.0.0)",
    "unstructured[md] (>=0.17.2,<0.18.0)"
]

[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
